-Added downloading and loading data.

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -27,16 +27,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Step -1: Download Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving extracted file to  image_data/test.p\n",
+      "Saving extracted file to  image_data/train.p\n",
+      "Saving extracted file to  image_data/valid.p\n"
+     ]
+    }
+   ],
+   "source": [
+    "import zipfile\n",
+    "import urllib3\n",
+    "import os\n",
+    "\n",
+    "data_url = 'https://s3-us-west-1.amazonaws.com/udacity-selfdrivingcar/traffic-signs-data.zip'\n",
+    "zipFilename = 'image_data/traffic-signs-data.zip'\n",
+    "\n",
+    "# check for extraction directories existence\n",
+    "if not os.path.isdir('image_data'):\n",
+    "    os.makedirs('image_data')\n",
+    "    \n",
+    "if not os.path.isfile(zipFilename):\n",
+    "    http = urllib3.PoolManager()\n",
+    "    \n",
+    "    # download data\n",
+    "    print(\"Downloading \",data_url)\n",
+    "    response = http.request('GET', data_url)\n",
+    "    zippedData = response.data\n",
+    "    \n",
+    "    # save data to disk\n",
+    "    print(\"Saving to \",zipFilename)\n",
+    "    output = open(zipFilename,'wb')\n",
+    "    output.write(zippedData)\n",
+    "    output.close()\n",
+    "    \n",
+    "# extract the data\n",
+    "zfobj = zipfile.ZipFile(zipFilename)\n",
+    "for file in zfobj.namelist():\n",
+    "    outputFilename = \"image_data/\" + file\n",
+    "    if not os.path.isfile(outputFilename):\n",
+    "        uncompressed = zfobj.read(file)\n",
+    "        # save uncompressed data to disk\n",
+    "        print(\"Saving extracted file to \",outputFilename)\n",
+    "        output = open(outputFilename,'wb')\n",
+    "        output.write(uncompressed)\n",
+    "        output.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---\n",
     "## Step 0: Load The Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load pickled data\n",
@@ -44,9 +103,9 @@
     "\n",
     "# TODO: Fill this in based on where you saved the training and testing data\n",
     "\n",
-    "training_file = ?\n",
-    "validation_file=?\n",
-    "testing_file = ?\n",
+    "training_file = 'image_data/train.p'\n",
+    "validation_file= 'image_data/valid.p'\n",
+    "testing_file = 'image_data/test.p'\n",
     "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
@@ -484,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
