--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -109,8 +109,6 @@
     "# Load pickled data\n",
     "import pickle\n",
     "\n",
-    "# TODO: Fill this in based on where you saved the training and testing data\n",
-    "\n",
     "training_file = 'image_data/train.p'\n",
     "validation_file= 'image_data/valid.p'\n",
     "testing_file = 'image_data/test.p'\n",
@@ -173,22 +171,21 @@
    ],
    "source": [
     "import numpy as np\n",
-    "### Replace each question mark with the appropriate value. \n",
     "### Use python, pandas or numpy methods rather than hard coding the results\n",
     "\n",
-    "# TODO: Number of training examples\n",
+    "# Number of training examples\n",
     "n_train = X_train.shape[0]\n",
     "\n",
-    "# TODO: Number of validation examples\n",
+    "# Number of validation examples\n",
     "n_validation = X_valid.shape[0]\n",
     "\n",
-    "# TODO: Number of testing examples.\n",
+    "# Number of testing examples.\n",
     "n_test = X_test.shape[0]\n",
     "\n",
-    "# TODO: What's the shape of an traffic sign image?\n",
+    "# What's the shape of an traffic sign image?\n",
     "image_shape = (X_test[0].shape)\n",
     "\n",
-    "# TODO: How many unique classes/labels there are in the dataset.\n",
+    "# How many unique classes/labels there are in the dataset.\n",
     "n_classes = np.max(y_train)-np.min(y_train)+1\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
@@ -1654,7 +1651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
